--- a/stylesheet/stylesheets.css
+++ b/stylesheet/stylesheets.css
@@ -7,7 +7,7 @@
 
 body {
     background-color: rgb(255, 255, 255);
-    font-size: 16px;
+    font-size: 15px;
 }
 
 html {
@@ -146,19 +146,19 @@ footer {
 
 #post-container {
     display: grid;
-    grid-template-columns: 75% 25%;
+    grid-template-columns: 75% 23%;
     grid-template-rows: auto;
     grid-template-areas: "main sidebar";
-    grid-gap: 60px;
+    grid-gap: 30px;
     padding-top: 70px;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 0  auto;
     margin-bottom: 250px;
 }
 
 .content-container {
     grid-area: main;
-    font-size: 22px;
+    font-size: 17px;
 }
 
 #post-description {
@@ -177,7 +177,8 @@ footer {
 
 .nav-container {
     grid-area: sidebar;
-    font-size: 18px;
+    font-size: 14px;
+    padding: 5px;
 }
 
 #main-title {
@@ -195,14 +196,14 @@ footer {
 }
 
 #tags-title, #categories-title {
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 10px;
     background-color: #000;
     text-align: center;
     color: #ffffff;
-    padding: 10px;
-    font-weight: 300;
-    border-radius: 25px;
+    padding: 10px 5px 10px 5px;
+    font-weight: bold;
+    border-radius: 10px;
 }
 
 #tag-list, #categories-list {
