--- a/stylesheets/stylesheets.css
+++ b/stylesheets/stylesheets.css
@@ -90,7 +90,7 @@ main {
 
 .post-box {
     flex: 1 1 0;
-    margin: 0 15px 35px 15px;
+    margin: 0 20px 35px 15px;
     width: 70%;
     height: 70%;
 }
@@ -146,10 +146,9 @@ footer {
 /*post */
 #post-container {
     display: grid;
-    grid-template-columns: 75% 23%;
     grid-template-rows: auto;
     grid-template-areas: "main sidebar";
-    grid-gap: 30px;
+    /* grid-gap: 30px; */
     padding-top: 70px;
     max-width: 1200px;
     margin: 0 auto;
@@ -168,18 +167,18 @@ footer {
 }
 
 .post-content {
-    line-height: 1;
+    line-height: 2;
     margin: 0 0;
 }
 
 /* post sidebar */
 
-.nav-container {
+/*.nav-container {
     grid-area: sidebar;
     font-size: 16px;
     padding: 5px;
 }
-
+*/
 #main-title {
     font-size: 24px;
     margin-bottom: 30px;
@@ -194,6 +193,7 @@ footer {
     width: 100%;
 }
 
+/* 
 #tags-title,
 #categories-title {
     font-size: 16px;
@@ -230,6 +230,7 @@ footer {
 #categories-list a:hover {
     color: #000;
 }
+*/
 
 /*reponsivo*/
 
@@ -277,10 +278,9 @@ footer {
 /*post*/
 #posts-container {
     grid-template-columns: 100%;
-    padding: 15px;
+    padding: 0;
     grid-template-areas:
         "main"
-        "sidebar";
 }
 
 .img-container img {
